tests/errors/fixed_form_5.f
      program X
      integer :: y
      y = 5abcdef + 3
500   print *, y
      end program
